tests/golden/errors/commas.stderr
error[formatting]: kanso has no commas; enumerations are space-separated
  --> commas.kso:1:15
   1 | total = sum [1, 2]
                     ^
